--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,8 @@ Imports:
     data.table,
     STRINGdb,
     igraph,
-    fs
+    fs,
+    magrittr
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
