--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,8 @@ Imports:
     STRINGdb,
     igraph,
     fs,
-    magrittr
+    magrittr,
+    progress
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
