--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,10 +12,12 @@ Imports:
     igraph,
     fs,
     magrittr,
-    progress
+    progress,
+    purrr,
+    dplyr
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.0.1
+RoxygenNote: 6.1.1
 Suggests: 
     testthat
